# GreensboroCorrelations

./: GreensboroCorrelations.C  GreensboroCorrelations.h  GreensboroCorrelationsFunctions.C  GreensboroCorrelationsInitializations.C  GreensboroCorrelationsLinkDef.h  GreensboroCorrelationsProcessEvent.C  GreensboroCorrelationsSpecialEventCuts.C  Makefile.am  README.md  RunMyMacro.C  Run_GreensboroCorrelations.C  Run_GreensboroCorrelationsRun14.C  Run_GreensboroCorrelationsRun15.C  Run_GreensboroCorrelationsRun16.C
work_dAu/: get_deta.C  get_dphi.C  test_14434.root
